# arm

./: CMakeLists.txt
main/: CMakeLists.txt  config.h  main.c
main/controllers/motors/: mg90s.c  mg90s.h
main/controllers/statemachine/: statemachine.c  statemachine.h
main/controllers/tcp/: TCP.c  TCP.h
